2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* transforms.cc (outprep): Don't sanitize all output; removes too
	many valid characters (\r, \t, etc.).
	* ui.cc: Call outprep on ticker output.
	(inform): Do still sanitize ui.inform() output.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* transforms.cc (outprep): New function.
	* ui.cc (inform): Use it.
	* monotone.cc (cpp_main): Use it.
	Everything that writes user-intended output directly (i.e., via
	cout) must call outprep() on that data before printing it.
	
2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* monotone.cc (cpp_main): Trick popt into converting its generated
	help messages into the current locale's charset.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* ui.cc (inform, sanitize): Convert all output from utf8 to
	current locale's charset.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* monotone.cc (cpp_main): Use bind_textdomain_codeset to request
	that all gettext'ed strings be returned in UTF-8.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* idna/nfkc.c (g_utf8_strlen): Expose.
	* transforms.{cc,hh} (length): New function.
	* ui.cc (write_ticks): Use length() instead of .size() to
	calculate string widths; should support multibyte characters
	better.  (Still some problems relating to truncating strings to
	avoid overflow -- calculate truncation by length, but perform
	truncation by bytes...)

2005-08-24  Benoît Dejean  <benoit@placenet.org>

	* po/fr.po: Updated French translation.

2005-08-24  Benoît Dejean  <benoit@placenet.org>

	* monotone.cc:
	* commands.cc: Two more i18n strings.

2005-08-23  Benoît Dejean  <benoit@placenet.org>

	* lua.cc: boost::format vs. F.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* AUTHORS: Add Benoît Dejean <benoit@placenet.org>.  Create new
	section for translators.  Add Benoît there too.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* commands.cc: N_("") -> "".

2005-08-23  Nathaniel Smith  <njs@pobox.com>
