@@ -238,8 +238,7 @@ cpp_main(int argc, char ** argv)
   setlocale(LC_ALL, "");
   bindtextdomain(PACKAGE, LOCALEDIR);
   textdomain(PACKAGE);
-  const char * default_textdomain_codeset
-    = bind_textdomain_codeset(PACKAGE, "UTF-8");
+  bind_textdomain_codeset(PACKAGE, "UTF-8");
 
   // we want to catch any early informative_failures due to charset
   // conversion etc
@@ -530,8 +529,8 @@ cpp_main(int argc, char ** argv)
         }
 
       // switch gettext() back to returning native charset strings, since popt
-      // will simply dump whatever gettext() returns
-      bind_textdomain_codeset(PACKAGE, default_textdomain_codeset);
+      // will simply dump whatever gettext() returns.
+      bind_textdomain_codeset(PACKAGE, system_charset().c_str());
       poptPrintHelp(ctx(), stdout, 0);
       bind_textdomain_codeset(PACKAGE, "UTF-8");
 
